Added player position to table, updated views, and reseeded db

--- a/player-dashboard/app/views/players/index.html.erb
+++ b/player-dashboard/app/views/players/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Team</th>
+      <th>Position</th>
       <th>Games played</th>
       <th>Wins</th>
       <th>Losses</th>
@@ -26,6 +27,7 @@
       <tr>
         <td><%= player.name %></td>
         <td><%= player.team %></td>
+        <td><%= player.position %></td>
         <td><%= player.games_played %></td>
         <td><%= player.wins %></td>
         <td><%= player.losses %></td>
