--- a/player-dashboard/app/views/players/index.html.erb
+++ b/player-dashboard/app/views/players/index.html.erb
@@ -18,6 +18,7 @@
       <th>Seconds per touch</th>
       <th>Dribbles per touch</th>
       <th>Points per touch</th>
+      <th>Points per front court touch</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -38,6 +39,7 @@
         <td><%= player.seconds_per_touch %></td>
         <td><%= player.dribbles_per_touch %></td>
         <td><%= player.points_per_touch %></td>
+        <td><%= player.points_per_front_court_touch %></td>
         <td><%= link_to 'Show', player %></td>
         <td><%= link_to 'Edit', edit_player_path(player) %></td>
         <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
