Added pagination to player index page

--- a/player-dashboard/app/views/players/index.html.erb
+++ b/player-dashboard/app/views/players/index.html.erb
@@ -5,6 +5,29 @@
 <table>
   <thead>
     <tr>
+      <th><%= sortable "name" %></th>
+      <th><%= sortable "team" %></th>
+      <th><%= sortable "position" %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @players.each do |player| %>
+      <tr>
+        <td><%= player.name %></td>
+        <td><%= player.team %></td>
+        <td><%= player.position %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= will_paginate @players %>
+
+
+
+
+<!-- <table>
+  <thead>
+    <tr>
       <th>Name</th>
       <th>Team</th>
       <th>Position</th>
@@ -44,7 +67,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
 <br>
 
