--- a/player-dashboard/app/assets/stylesheets/scaffolds.scss
+++ b/player-dashboard/app/assets/stylesheets/scaffolds.scss
@@ -71,3 +71,20 @@ div {
     list-style: square;
   }
 }
+
+
+// !!!!!!!!!!!!!!!!!!!!!!! Table
+
+.pretty th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.pretty th .asc {
+  background-image: url(/images/up_arrow.gif);
+}
+
+.pretty th .desc {
+  background-image: url(/images/down_arrow.gif);
+}
