--- a/player-dashboard/app/views/players/index.html.erb
+++ b/player-dashboard/app/views/players/index.html.erb
@@ -2,7 +2,17 @@
 
 <h1>Listing Players</h1>
 
-<table>
+<%= form_tag players_path, :method => 'get' do %>
+  <%= hidden_field_tag :direction, params[:direction]%>
+  <%= hidden_field_tag :sort, params[:sort]%>
+
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
+<table class="pretty">
   <thead>
     <tr>
       <th><%= sortable "name" %></th>
