Completed filtering by columns and updated view

--- a/player-dashboard/app/assets/stylesheets/scaffolds.scss
+++ b/player-dashboard/app/assets/stylesheets/scaffolds.scss
@@ -82,9 +82,9 @@ div {
 }
 
 .pretty th .asc {
-  background-image: url(/images/up_arrow.gif);
+  background-image: url(asset-path('up.jpg'));
 }
 
 .pretty th .desc {
-  background-image: url(/images/down_arrow.gif);
+  background-image: url(asset-path('down.jpg'));
 }
