Updated table, seed file, and view to account for front court touches

--- a/player-dashboard/app/views/players/_players.html.erb
+++ b/player-dashboard/app/views/players/_players.html.erb
@@ -5,6 +5,7 @@
       <th><%= sortable "name" %></th>
       <th><%= sortable "team" %></th>
       <th><%= sortable "position" %></th>
+      <th><%= sortable "points_per_fc_touch" %></th>
     </tr>
   </thead>
   <tbody>
@@ -13,6 +14,7 @@
         <td><%= player.name %></td>
         <td><%= player.team %></td>
         <td><%= player.position %></td>
+        <td><%= player.points_per_fc_touch %></td>
       </tr>
     <% end %>
   </tbody>
