--- a/player_dashboard/app/views/players/show.html.erb
+++ b/player_dashboard/app/views/players/show.html.erb
@@ -1,5 +1,17 @@
 <p id="notice"><%= notice %></p>
 
+<div class="row">
+  <!-- Line Chart - Single Series -->
+  <div class="col-xs-6">
+    <h3>Visits By Day</h3>
+    <%= line_chart @players.group_by_day(:created_at).count %>
+  </div>
+</div>
+
+<%= pie_chart Player.group(:position).count %>
+
+
+
 <p>
   <strong>Name:</strong>
   <%= @player.name %>
