--- a/player_dashboard/app/views/players/index.html.erb
+++ b/player_dashboard/app/views/players/index.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<div class="page-header">
+  <h1>Example page header <small>Subtext for header</small></h1>
+</div>
+
 <h1>Listing Players</h1>
 
 <%= form_tag players_path, :method => 'get' do %>
@@ -17,52 +21,38 @@
   <%= render 'players' %>
 </div>
 
+<!-- <%= link_to 'New Player', new_player_path %> -->
 
 
-<!-- <table>
+
+
+<!-- <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Team</th>
-      <th>Position</th>
-      <th>Games played</th>
-      <th>Wins</th>
-      <th>Losses</th>
-      <th>Minutes</th>
+      <th>#</th>
       <th>Points</th>
-      <th>Touches</th>
-      <th>Time of possession</th>
-      <th>Seconds per touch</th>
-      <th>Dribbles per touch</th>
-      <th>Points per touch</th>
-      <th colspan="3"></th>
+      <th>League Average</th>
+      <th>Difference</th>
     </tr>
   </thead>
-
   <tbody>
-    <% @players.each do |player| %>
-      <tr>
-        <td><%= player.name %></td>
-        <td><%= player.team %></td>
-        <td><%= player.position %></td>
-        <td><%= player.games_played %></td>
-        <td><%= player.wins %></td>
-        <td><%= player.losses %></td>
-        <td><%= player.minutes %></td>
-        <td><%= player.points %></td>
-        <td><%= player.touches %></td>
-        <td><%= player.time_of_possession %></td>
-        <td><%= player.seconds_per_touch %></td>
-        <td><%= player.dribbles_per_touch %></td>
-        <td><%= player.points_per_touch %></td>
-        <td><%= link_to 'Show', player %></td>
-        <td><%= link_to 'Edit', edit_player_path(player) %></td>
-        <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <tr>
+      <th scope="row">1</th>
+      <td><%= @player.points %></td>
+      <td><%= Player.average_points %></td>
+      <td><%= @player.points - Player.average_points %></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
   </tbody>
 </table> -->
-
-<br>
-
-<%= link_to 'New Player', new_player_path %>
