Updated shortcut icon and more styling

--- a/player_dashboard/app/views/layouts/application.html.erb
+++ b/player_dashboard/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+  <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/s/xup7s8wvgop92m6/bball.jpg?dl=0">
+
 
 
   <%= csrf_meta_tags %>
