--- a/player_dashboard/app/views/players/_players.html.erb
+++ b/player_dashboard/app/views/players/_players.html.erb
@@ -32,7 +32,7 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3>All Power Forwards and Centers</h3>
+    <h3>Current Power Forwards and Centers</h3>
   </div>
 
   <table class="table">
