Updated views to included analysis descriptions, updated index page header, mini refactorings

--- a/player_dashboard/app/views/players/_players.html.erb
+++ b/player_dashboard/app/views/players/_players.html.erb
@@ -33,6 +33,13 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3>Current Power Forwards and Centers</h3>
+    <p>
+      <small>
+        <i>
+          Click on the name of player to see additional statistics and analysis
+        </i>
+      </small>
+    </p>
   </div>
 
   <table class="table">
