--- a/player_dashboard/app/views/players/show.html.erb
+++ b/player_dashboard/app/views/players/show.html.erb
@@ -11,9 +11,13 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3>Sportvu Statistics <small>(per game)</small></h3>
+      <h3>SportVU Statistics <small>(per game)</small></h3>
       <p>
-        Capturing something from somewhere
+        SportVU is a camera system that is hung from the rafters of every NBA arena. This
+        system has the ability to collect a tremendous amount of data with a focus on
+        real-time player and ball tracking. The below information has been scraped off the NBA's website
+        and we are levaraging it to compare a player's per game average to the NBA league average. Insights
+        can then be drawn about a specific player's strengths and weaknesses.
       </p>
     </div>
 
@@ -85,7 +89,10 @@
     <div class="panel-heading">
       <h3>Points Per Touch Analysis <small>(per game)</small></h3>
       <p>
-        This statistic looks at something
+        Specific scoring styles can vary greatly for frontcourt players in the NBA. The below "Points per Touch Analysis"
+        examines three of the most popular locations where a Center or Power Forward is likely to touch the ball
+        on offense. The analysis then dives deeper to determine how many points they score on average from this location.
+        This "Player Average" is then compared to the "NBA Average".
       </p>
     </div>
     <br>
