--- a/player_dashboard/app/views/players/index.html.erb
+++ b/player_dashboard/app/views/players/index.html.erb
@@ -2,11 +2,11 @@
 
 <div class="container">
   <div class="page-header">
-    <h1>NBA Frontcourt Player Scoring <small>Impact Of Touches by Location</small></h1>
+    <h1>NBA Court Vision
+      <br>
+        <small>How Touch Location Impacts Scoring of Frontcourt Players</small>
+    </h1>
   </div>
-  <p>
-    I see the value in blah blah blah
-  </p>
 
   <%= form_tag players_path, :method => 'get' do %>
     <%= hidden_field_tag :direction, params[:direction]%>
