Updated wording on summary of SportVU

--- a/player_dashboard/app/views/players/show.html.erb
+++ b/player_dashboard/app/views/players/show.html.erb
@@ -15,7 +15,7 @@
       <p>
         SportVU is a camera system that is hung from the rafters of every NBA arena. This
         system has the ability to collect a tremendous amount of data with a focus on
-        real-time player and ball tracking. The below information has been scraped off the NBA's website
+        real-time player and ball tracking. A majority of the below data has been scraped off the NBA's website
         and we are levaraging it to compare a player's per game average to the NBA league average. Insights
         can then be drawn about a specific player's strengths and weaknesses.
       </p>
